--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -5,16 +5,16 @@
   flex-direction: column;
   width: 350px;
   margin-right: 300px;
+  border: solid 1px #123ac8;
   .logoHod {
     margin: 0;
     width: 350px;
   }
   .formRegister {
     margin-top: 0;
-    width: 320px;
+    width: 330px;
     display: flex;
     flex-direction: column;
-    border: solid 1px #123ac8;
     background-color: #f7f3ee;
     padding: 10px;
 
@@ -30,8 +30,14 @@
     button {
       border: solid 1px #123ac8;
       border-radius: 999px;
-      max-width: 110px;
+      width: 100%;
       margin: 0 10px 5px 0;
+      position: static;
+      background-color: #ccb;
+    }
+    button:hover {
+      background-color: #fe4236;
+      transition: 0.35s;
     }
   }
 }
