--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -1,5 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
 
+.bg-color {
+  width: 100vw;
+  height: 100%;
+  margin: 0;
+  .bg-imagen {
+    background: linear-gradient(to right, red 40%, transparent 0),
+      url("../assets/img/Maskgroup.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+  }
+}
 .register-container {
   display: flex;
   flex-direction: column;
@@ -40,22 +51,4 @@
       transition: 0.35s;
     }
   }
-}
-
-body,
-html {
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  background: linear-gradient(to right, red 40%, transparent 0),
-    url("../assets/img/Maskgroup.png");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-}
-
-.container {
-  display: flex;
-  height: 100vh;
 }
