--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -42,12 +42,12 @@ html {
   margin: 0;
 }
 
-body {
-  background: linear-gradient(to right, red 40%, transparent 0),
-    url("../assets/img/Maskgroup.png");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-}
+// body {
+//   background: linear-gradient(to right, red 40%, transparent 0),
+//     url("../assets/img/Maskgroup.png");
+//   background-size: 100% 100%;
+//   background-repeat: no-repeat;
+// }
 
 .container {
   display: flex;
