--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,8 @@
 
 .read-the-docs {
   color: #888;
+}
+body {
+  margin: 0;
+  padding: 0;
 }
