--- a/Front/src/styles/login.scss
+++ b/Front/src/styles/login.scss
@@ -1,20 +1,9 @@
-.login-body {
+body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
-  background-image: url("../assets/img/Thumbnail.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  padding: 0;
 }
 
-.login-container {
+.estiloLogin {
   position: relative;
   min-height: 100vh;
   min-width: 100%;
@@ -26,16 +15,48 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  display: grid;
+  place-items: center;
 
   form {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 70%;
+    left: 80%;
     transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
     max-width: 400px;
+    padding: 20px;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+  }
+  input,
+  button {
+    width: 100%;
+    padding: 0.5rem;
+  }
+
+  @media (max-width: 768px) {
+    form {
+      max-width: 90%; /* O cualquier valor que encuentres adecuado */
+    }
+  }
+
+  label {
+    text-align: left;
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+
+  .btn-primary,
+  .btn-success {
+    width: 100%;
+    margin-top: 0.5rem;
   }
 }
