--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -1,38 +1,39 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
 
-.bg-color {
+.fondo {
+  display: flex;
+  background: linear-gradient(to right, #f6382a 40%, transparent 0),
+    url("../assets/img/Maskgroup.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   width: 100vw;
-  height: 100%;
-  margin: 0;
-  .bg-imagen {
-    background: linear-gradient(to right, red 40%, transparent 0),
-      url("../assets/img/Maskgroup.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-  }
-  .register-container {
+  height: 100vh;
+  align-self: center;
+
+  .register {
     display: flex;
     flex-direction: column;
     width: 350px;
-    height: 700px;
-    margin-right: 300px;
+    height: 500px;
     border: solid 1px #123ac8;
+
     .logoHod {
       margin: 0;
       width: 350px;
     }
     .formRegister {
-      margin-top: 0;
+      margin: auto;
       width: 330px;
       display: flex;
       flex-direction: column;
       background-color: #f7f3ee;
       padding: 10px;
+      height: 450px;
 
       input {
         font-family: "Montserrat", sans-serif;
         padding: 10px;
-        margin: 3px;
+        margin: 1px;
         font-size: 12px;
         border: solid 1px #123ac8;
         border-radius: 999px;
