--- a/Front/src/styles/login.scss
+++ b/Front/src/styles/login.scss
@@ -59,4 +59,13 @@ body {
     width: 100%;
     margin-top: 0.5rem;
   }
+  p {
+    color: #007bff;
+    transition: color 0.3s ease;
+    transition: color 0.3s ease;
+    font-size: 20px;
+  }
+  p:hover {
+    color: #0056b3;
+  }
 }
