--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -1,75 +1,71 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
-
-.bg-color {
-  width: 100vw;
-  height: 100%;
+body {
   margin: 0;
-  .bg-imagen {
-    background: linear-gradient(to right, red 40%, transparent 0),
-      url("../assets/img/Maskgroup.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-  }
-  .register-container {
+  padding: 0;
+}
+
+.fondo {
+  position: relative;
+  min-height: 100vh;
+  min-width: 100%;
+  background-image: url("../assets/img/Thumbnail.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  place-items: center;
+
+  form {
+    position: absolute;
+    top: 70%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
-    width: 350px;
-    height: 700px;
-    margin-right: 300px;
-    border: solid 1px #123ac8;
-    .logoHod {
-      margin: 0;
-      width: 350px;
-    }
-    .formRegister {
-      margin-top: 0;
-      width: 330px;
-      display: flex;
-      flex-direction: column;
-      background-color: #f7f3ee;
-      padding: 10px;
+    align-items: center;
+    width: 80%;
+    max-width: 400px;
+    padding: 20px;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+  }
+  input,
+  button {
+    width: 100%;
+    padding: 0.5rem;
+  }
 
-      input {
-        font-family: "Montserrat", sans-serif;
-        padding: 10px;
-        margin: 3px;
-        font-size: 12px;
-        border: solid 1px #123ac8;
-        border-radius: 999px;
-        text-align: center;
-      }
-      button {
-        border: solid 1px #123ac8;
-        border-radius: 999px;
-        width: 100%;
-        margin: 0 10px 5px 0;
-        position: static;
-        background-color: #ccb;
-      }
-      button:hover {
-        background-color: #fe4236;
-        transition: 0.35s;
-      }
+  @media (max-width: 768px) {
+    form {
+      max-width: 90%; /* O cualquier valor que encuentres adecuado */
     }
   }
+
+  label {
+    text-align: left;
+    display: block;
+    margin-bottom: 0.5rem;
+  }
+
+  .btn-primary,
+  .btn-success {
+    width: 100%;
+    margin-top: 0.5rem;
+  }
+  p {
+    color: #007bff;
+    transition: color 0.3s ease;
+    transition: color 0.3s ease;
+    font-size: 20px;
+  }
+  p:hover {
+    color: #0056b3;
+  }
 }
-
-
-body,
-html {
-  height: 100%;
-  margin: 0;
-}
-
-// body {
-//   background: linear-gradient(to right, red 40%, transparent 0),
-//     url("../assets/img/Maskgroup.png");
-//   background-size: 100% 100%;
-//   background-repeat: no-repeat;
-// }
-
-.container {
-  display: flex;
-  height: 100vh;
-}
-
