--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -6,59 +5,50 @@ body {
   width: 100vw;
 }
 
-
 .fondo {
-  display: flex;
-  background: linear-gradient(to right, #f6382a 40%, transparent 0),
-    url("../assets/img/Maskgroup.png");
-  background-size: 100% 100%;
+  margin: 0;
+  position: relative;
+  min-height: 100vh;
+  min-width: 100%;
+  background-image: url("../assets/img/Thumbnail.png");
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
-  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: grid;
+  place-items: center;
 
-  .register {
+  form {
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
-    width: 350px;
-    height: 500px;
-    border: solid 1px #123ac8;
+    align-items: center;
+    width: 80%;
+    max-width: 400px;
+    padding: 20px;
+    border-radius: 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+  }
+  input,
+  button {
+    width: 100%;
+    padding: 0.5rem;
+    margin: -8px -5px;
+  }
 
-    .logoHod {
-      margin: 0;
-      width: 350px;
-    }
-    .formRegister {
-      margin: auto;
-      width: 330px;
-      display: flex;
-      flex-direction: column;
-      background-color: #f7f3ee;
-      padding: 10px;
-      height: 450px;
-
-      input {
-        font-family: "Montserrat", sans-serif;
-        padding: 10px;
-        margin: 1px;
-        font-size: 12px;
-        border: solid 1px #123ac8;
-        border-radius: 999px;
-        text-align: center;
-      }
-      button {
-        border: solid 1px #123ac8;
-        border-radius: 999px;
-        width: 100%;
-        margin: 0 10px 5px 0;
-        position: static;
-        background-color: #ccb;
-      }
-      button:hover {
-        background-color: #fe4236;
-        transition: 0.35s;
-      }
-
+  @media (max-width: 768px) {
+    form {
+      max-width: 90%; /* O cualquier valor que encuentres adecuado */
     }
   }
 
