--- a/Front/src/styles/login.scss
+++ b/Front/src/styles/login.scss
@@ -20,8 +20,8 @@ body {
 
   form {
     position: absolute;
-    top: 70%;
-    left: 80%;
+    top: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.8);
@@ -44,7 +44,8 @@ body {
 
   @media (max-width: 768px) {
     form {
-      max-width: 90%; /* O cualquier valor que encuentres adecuado */
+      max-width: 90%;
+      left: 50%; /* O cualquier valor que encuentres adecuado */
     }
   }
 
