--- a/Front/src/styles/register.scss
+++ b/Front/src/styles/register.scss
@@ -23,8 +23,7 @@ body {
 
   form {
     position: absolute;
-    top: 50%;
-    left: 80%;
+    left: 40%;
     transform: translate(-50%, -50%);
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.8);
@@ -48,7 +47,8 @@ body {
 
   @media (max-width: 768px) {
     form {
-      max-width: 90%; /* O cualquier valor que encuentres adecuado */
+      max-width: 90%;
+      left: 50%; /* O cualquier valor que encuentres adecuado */
     }
   }
 
