--- a/Front/src/styles/contenido.scss
+++ b/Front/src/styles/contenido.scss
@@ -15,6 +15,7 @@
   text-align: center;
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 200px;
 }
 
 h2 {
