--- a/Front/src/styles/contenido.scss
+++ b/Front/src/styles/contenido.scss
@@ -1,10 +1,18 @@
+.vista-user {
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to right, #f7f3ee 40%, transparent 40%),
+    url("../assets/img/Maskgroup.png");
+  background-size: cover;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-image: url("../assets/img/Thumbnail.png");
 }
 
 .form-container {
