--- a/Front/src/styles/contenido.scss
+++ b/Front/src/styles/contenido.scss
@@ -3,8 +3,9 @@
   width: 100%;
   height: 100vh;
   background: linear-gradient(to right, #f7f3ee 40%, transparent 40%),
-    url("../assets/img/Maskgroup.png");
+    url("../assets/img/background-image.jpg");
   background-size: cover;
+  background-position: bottom;
 }
 
 .container {
@@ -16,14 +17,14 @@
 }
 
 .form-container {
-  border: 2px solid #ddd; // Borde alrededor del formulario
+  border: 2px solid #333; // Borde alrededor del formulario
   border-radius: 8px;
   padding: 20px;
   width: 400px;
   text-align: center;
   background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 200px;
+  margin: 50% 62% 50% 38%;
 }
 
 h2 {
