--- a/Front/src/styles/home.scss
+++ b/Front/src/styles/home.scss
@@ -1,13 +1,30 @@
 .vista-home {
   margin: 0;
   background: linear-gradient(to right, #fe4236 40%, transparent 40%),
-    url("../assets/img/Maskgroup.png");
+    url("../assets/img/background-image.jpg");
   background-size: cover;
+  background-position: bottom right;
+  height: 100vh;
+  .imagen-home {
+    display: block;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    margin: 15% 700% 0% 30%;
+    border: solid 1px #333;
+    border-radius: 15px;
+    transition: 0.5s;
+  }
+}
+
+.imagen-home:hover {
+  transform: scale(1.35);
+  transition: 0.5s;
 }
 
 .vista-user {
   margin: 0;
   background: linear-gradient(to right, #f7f3ee 40%, transparent 40%),
-    url("../assets/img/Maskgroup.png");
+    url("../assets/img/backgound-image.jpg");
   background-size: cover;
 }
