--- a/Front/src/styles/login.scss
+++ b/Front/src/styles/login.scss
@@ -4,12 +4,14 @@ body {
 }
 
 .estiloLogin {
+  margin: 0;
   position: relative;
   min-height: 100vh;
   min-width: 100%;
-  background-image: url("../assets/img/Thumbnail.png");
+  background: linear-gradient(to right, #fe4236 40%, transparent 40%),
+    url("../assets/img/background-image.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: bottom right;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
