--- a/Front/src/styles/createproperties.scss
+++ b/Front/src/styles/createproperties.scss
@@ -1,18 +1,23 @@
-form {
-  position: absolute;
-  top: 50%;
-  left: 20%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  background-color: rgba(255, 255, 255, 0.8);
+.form-check-admin {
+  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.form-check-option {
+  margin-bottom: 10px;
+}
+
+.form-check-input {
+  background-color: #f8f9fa;
+  border: none;
+  margin-right: 5px;
+  height: 18px;
+  width: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.form-control,
+input {
   width: 80%;
-  max-width: 400px;
-  padding: 20px;
-  border-radius: 30px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 1rem;
 }
