change createProperty and route

--- a/Front/src/styles/createproperties.scss
+++ b/Front/src/styles/createproperties.scss
@@ -21,3 +21,20 @@
 input {
   width: 80%;
 }
+.titulo {
+  margin-top: 500px;
+}
+// .label {
+//   height: 50px;
+//   border-radius: 20px;
+//   color: blue;
+//   padding: 0;
+//   width: 100%;
+// }
+.form {
+  display: flex;
+}
+
+.btn-success {
+  margin-bottom: 50px;
+}
