--- a/Front/src/styles/venta.scss
+++ b/Front/src/styles/venta.scss
@@ -1,7 +1,7 @@
-.tituloVenta {
-  height: 100px;
-  margin-top: 750px;
-}
-.h2 {
-  margin-top: 400px;
-}
+// .tituloVenta {
+//   height: 100px;
+//   margin-top: 750px;
+// }
+// .h2 {
+//   margin-top: 400px;
+// }
