--- a/Front/src/styles/properties.scss
+++ b/Front/src/styles/properties.scss
@@ -4,13 +4,13 @@
   justify-content: center;
   width: 400px;
   min-height: 100px;
+  border: 1px solid black;
+  width: 990px;
 }
 
 .imagenPropiedad {
   width: 400px;
   height: 330px;
-
-  margin-right: 20px;
 }
 
 .info {
@@ -18,7 +18,7 @@
   flex-direction: column;
 
   width: 1042px;
-  height: 300px;
+  height: 330px;
 }
 
 .info h6 {
@@ -26,9 +26,6 @@
   font-size: 0.9rem; /* Ajusta el tamaño del subtítulo según tus necesidades */
 }
 
-.info p {
-  margin: 0;
-}
 .div-info {
   display: flex;
   justify-content: center;
@@ -44,7 +41,6 @@
 }
 .titulos {
   font-weight: bold;
-  padding: 0;
 }
 
 .div-uno {
