--- a/Front/src/styles/cardproperties.scss
+++ b/Front/src/styles/cardproperties.scss
@@ -1,5 +1,3 @@
-// .containerGrilla {
-//   margin: 0 auto;
-//   max-width: 1200px;
-//   padding: 20px;
-// }
+.containerGrilla {
+  margin-left: 20px;
+}
