--- a/Front/src/styles/profile.scss
+++ b/Front/src/styles/profile.scss
@@ -1,64 +1,112 @@
 .container-gral {
+  display: flex;
+  flex-direction: column;
   margin-left: 20px;
   width: 100vw;
-
-  .editButton {
+  top: 0;
+  .buttons-profile {
     display: block;
-    border: solid 1px #333;
-    border-radius: 999px;
-    position: absolute;
-    height: 50px;
-    margin: 70px 0 70px 0;
+    position: relative;
+    width: 100%;
+    padding-top: 7%;
   }
-  .passButton {
-    display: block;
-    border: solid 1px #333;
-    border-radius: 999px;
+  button {
+    font-size: 17px;
+    background: transparent;
+    border: none;
+    padding: 1em 1.5em;
+    color: #333;
+    text-transform: uppercase;
+    position: relative;
+    transition: 0.5s ease;
+  }
+  button:before {
+    content: "";
     position: absolute;
-    height: 50px;
-    margin: 70px 0 70px 120px;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    background-color: #ff0606;
+    transition: 0.5s ease;
   }
   button:hover {
-    background-color: #ddd;
+    color: #1e1e2b;
+    transition-delay: 0.5s;
+  }
+  button:hover::before {
+    width: 100%;
+  }
+  button:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    background-color: #ff0606;
+    transition: 0.4s ease;
+    z-index: -1;
+  }
+  button:hover::after {
+    height: 100%;
+    transition-delay: 0.4s;
+    color: aliceblue;
+  }
+  .editButton {
+    margin: 5px 0 0 0;
+  }
+  .passButton {
+    margin: 5px 0 0 120px;
   }
 
-  //   .profile-container {
-  //     width: 100vw;
-  //     text-align: center;
-  //     .userProfile {
-  //       display: flex;
-  //       flex-direction: column;
-  //       align-items: center;
-  //       width: 100%;
-  //       margin-top: 75px;
-  //       p {
-  //         text-align: left;
-  //         width: 60vw;
-  //         text-decoration: underline;
-  //       }
-  //     }
-  //   }
-  //   input {
-  //     border: solid 2px #333;
-  //     border-radius: 999px;
-  //     margin: 5px;
-  //     text-align: center;
-  //     max-width: 500px;
-  //   }
+  .profile-container {
+    width: 80vw;
+    text-align: center;
+    margin: auto;
+    .userProfile {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      margin-bottom: 100px;
+      p {
+        text-align: left;
+        width: 60vw;
+        text-decoration: underline;
+        margin-top: 20px;
+      }
+    }
+    h3 {
+      text-align: center;
+      margin: auto;
+      border: solid 1px #000;
+      border-radius: 12px;
+      width: 80%;
+    }
+  }
+}
 
-  //   h1 {
-  //     display: block;
-  //     text-decoration: underline;
-  //     border: solid 1.2px #333;
-  //     max-width: 700px;
-  //     text-align: center;
-  //     margin: 0 auto;
-  //     padding: 8px;
-  //   }
-  //   h3 {
-  //     text-align: center;
-  //     border: solid 1px #000;
-  //     border-radius: 12px;
-  //   }
-  // }
+.userProfile-edit {
+  h3 {
+    margin-top: 20px;
+  }
+}
+
+// }
+h1 {
+  // text-decoration: underline;
+  border-bottom: solid 0.5px #ff0606;
+  max-width: 700px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 8px;
+}
+
+input {
+  border: solid 2px #333;
+  border-radius: 999px;
+  margin: 10px auto;
+  text-align: center;
+  max-width: 500px;
 }
