--- a/Front/src/styles/properties.scss
+++ b/Front/src/styles/properties.scss
@@ -1,15 +1,16 @@
-.contenedorPropiedades {
+.contenedorUserPropiedades {
   display: flex;
-  width: 707px;
+
+  width: 100%;
   min-height: 100px;
   border: 1px solid black;
   background-color: aliceblue;
 }
 
 .imagenPropiedad {
-  width: 293px;
   height: 200px;
   object-fit: cover;
+  width: 270px;
 }
 .imagen {
   display: flex;
@@ -70,7 +71,7 @@
   padding: 5px;
 
   height: 80px;
-  width: 418px;
+  width: 351px;
 }
 .div-tres {
   border: 1px solid black;
@@ -78,7 +79,7 @@
   padding: 10px;
   margin-left: 5px;
   margin-right: 5px;
-  width: 408px;
+  width: 341px;
 }
 .div-cuatro {
   display: flex;
@@ -88,7 +89,7 @@
   margin-left: 5px;
   margin-right: 5px;
   height: 114px;
-  width: 408px;
+  width: 341px;
 }
 // .div-dos .datas {
 //   margin-right: 20px;
