--- a/Front/src/styles/profile.scss
+++ b/Front/src/styles/profile.scss
@@ -100,7 +100,8 @@ h1 {
   max-width: 700px;
   text-align: center;
   margin: 0 auto;
-  padding: 8px;
+  padding: 62px;
+  margin-top: 20px;
 }
 
 input {
