change properties scss

--- a/Front/src/styles/properties.scss
+++ b/Front/src/styles/properties.scss
@@ -14,6 +14,11 @@
     .card-text button {
       width: 100%;
     }
+    .img-fluid {
+      max-width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
 
