--- a/Front/src/styles/AdminProperties.scss
+++ b/Front/src/styles/AdminProperties.scss
@@ -1,117 +1,147 @@
-.contenedorAdminPropiedades {
-  display: flex;
-  width: 707px;
-  min-height: 100px;
-  border: 1px solid black;
-  background-color: aliceblue;
-}
-
-.imagenPropiedadAdmin {
-  width: 293px;
-  height: 200px;
+.img {
   object-fit: cover;
 }
-.imagenAdmin {
-  display: flex;
-  align-items: center;
+
+@media (max-width: 450px) {
+  .row-cols-2 > * {
+    flex: 0 0 auto;
+    width: 100%;
+  }
 }
 
-.infoAdmin {
-  display: flex;
-  flex-direction: column;
-  width: 1042px;
-  height: 330px;
+@media (max-width: 986px) {
+  .row-cols-6 > * {
+    .card-text button {
+      width: 100%;
+    }
+    .img-fluid {
+      max-width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+@media (min-width: 768px) {
+  .col-md-3 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
 }
 
-.div-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // border-right: 1px solid black;
-  border: 1px solid black;
-  width: 143px;
-  height: 76px;
-  padding: 10px;
-}
-.lugar {
-  margin-left: 100px;
-  display: flex;
-}
+// .contenedorAdminPropiedades {
+//   display: flex;
+//   width: 707px;
+//   min-height: 100px;
+//   border: 1px solid black;
+//   background-color: aliceblue;
+// }
 
-.parrafo {
-  font-size: 20px;
-  margin-left: 120px;
-  text-align: center;
-  align-items: center;
-}
-.titulos {
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-}
-.div-info-uno-admin {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 220px;
-  margin-left: 25px;
-}
-.div-uno-admin {
-  display: flex;
-  width: 500px;
-  height: 75px;
-  width: 100px;
-}
+// .imagenPropiedadAdmin {
+//   width: 293px;
+//   height: 200px;
+//   object-fit: cover;
+// }
+// .imagenAdmin {
+//   display: flex;
+//   align-items: center;
+// }
 
-.div-dos-admin {
-  display: flex;
+// .infoAdmin {
+//   display: flex;
+//   flex-direction: column;
+//   width: 1042px;
+//   height: 330px;
+// }
 
-  // border: 1px solid black;
-  padding: 5px;
+// .div-info {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   // border-right: 1px solid black;
+//   border: 1px solid black;
+//   width: 143px;
+//   height: 76px;
+//   padding: 10px;
+// }
+// .lugar {
+//   margin-left: 100px;
+//   display: flex;
+// }
 
-  height: 80px;
-  width: 418px;
-}
-.div-tres-admin {
-  border: 1px solid black;
-  height: 114px;
-  padding: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
-  width: 408px;
-}
-.div-cuatro-admin {
-  display: flex;
-  justify-content: space-around;
-  border: 1px solid black;
-  padding: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
-  height: 114px;
-  width: 408px;
-}
-// .div-dos .datas {
-//   margin-right: 20px;
+// .parrafo {
+//   font-size: 20px;
+//   margin-left: 120px;
+//   text-align: center;
+//   align-items: center;
+// }
+// .titulos {
+//   font-weight: bold;
+//   display: flex;
+//   justify-content: center;
+// }
+// .div-info-uno-admin {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 220px;
+//   margin-left: 25px;
+// }
+// .div-uno-admin {
+//   display: flex;
+//   width: 500px;
+//   height: 75px;
+//   width: 100px;
+// }
+
+// .div-dos-admin {
+//   display: flex;
+
+//   // border: 1px solid black;
+//   padding: 5px;
+
+//   height: 80px;
+//   width: 418px;
+// }
+// .div-tres-admin {
+//   border: 1px solid black;
+//   height: 114px;
+//   padding: 10px;
+//   margin-left: 5px;
+//   margin-right: 5px;
+//   width: 408px;
+// }
+// .div-cuatro-admin {
+//   display: flex;
+//   justify-content: space-around;
+//   border: 1px solid black;
+//   padding: 10px;
+//   margin-left: 5px;
+//   margin-right: 5px;
+//   height: 114px;
+//   width: 408px;
+// }
+// // .div-dos .datas {
+// //   margin-right: 20px;
+// //   margin-left: 10px;
+// // }
+
+// .fa-solid {
 //   margin-left: 10px;
 // }
-
-.fa-solid {
-  margin-left: 10px;
-}
-// .datas {
-//   width: 100%;
+// // .datas {
+// //   width: 100%;
+// // }
+// .primerCuadradoAdmin {
+//   width: 203px;
+//   display: flex;
 // }
-.primerCuadradoAdmin {
-  width: 203px;
-  display: flex;
-}
 
-//////////////
-.tituloAlquilerAdmin {
-  height: 100px;
-  // margin-top: 6250px;
-  // background-color: red;
-}
-.h2 {
-  margin-top: 50px;
-}
+// //////////////
+// .tituloAlquilerAdmin {
+//   height: 100px;
+//   // margin-top: 6250px;
+//   // background-color: red;
+// }
+// .h2 {
+//   margin-top: 50px;
+// }
