--- a/Front/src/styles/navbar.scss
+++ b/Front/src/styles/navbar.scss
@@ -8,3 +8,9 @@
 p {
   padding-top: 8px;
 }
+
+.admin-nav-option {
+  background-color: rgb(12, 12, 250);
+  height: 40px;
+  border-radius: 10px 2px;
+}
