--- a/Front/src/styles/profile.scss
+++ b/Front/src/styles/profile.scss
@@ -8,7 +8,7 @@
     display: block;
     position: relative;
     width: 100%;
-    padding-top: 7%;
+    padding-top: 2%;
   }
   button {
     font-size: 17px;
@@ -110,4 +110,13 @@ input {
   margin: 10px auto;
   text-align: center;
   max-width: 500px;
+}
+
+/* Seleccionar la imagen por la clase CSS */
+.imagenIcono img {
+  width: 400px;
+  height: 250px;
+  padding: 10px;
+  margin-top: 20px;
+  /* Puedes agregar más estilos según tus necesidades */
 }
