fix password update

--- a/Front/src/styles/navbarAdmin.scss
+++ b/Front/src/styles/navbarAdmin.scss
@@ -4,3 +4,13 @@
 .nav-link {
   color: white;
 }
+
+p {
+  padding-top: 8px;
+}
+
+.user-nav-option {
+  background-color: rgb(250, 12, 12);
+  height: 40px;
+  border-radius: 10px 2px;
+}
